Gestion detail pdt, panier, navigation

--- a/orinoco-frontend/index.html
+++ b/orinoco-frontend/index.html
@@ -20,6 +20,7 @@
 
   <body>
     <div id="main">
+      <p><button id="toOrder">Panier</button></p>
       <div id="result"></div>
     </div>
   </body>
