--- a/orinoco-frontend/index.html
+++ b/orinoco-frontend/index.html
@@ -19,10 +19,37 @@
   </head>
 
   <body>
-    <div id="main">
-      <p><button id="toOrder">Panier</button></p>
+    <header>
+      <h1>Orinoco</h1>
+      <p>Venez trouver l'ourson en peluche de votre enfance</p>
+    </header>
+
+    <nav>
+      <ul>
+        <li><button id="toOrder">Panier</button></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    
+    <main>
       <div id="result"></div>
-    </div>
+
+      <aside>
+        <h2>Related</h2>
+
+        <ul>
+          <li><a href="#">Oh I do like to be beside the seaside</a></li>
+          <li><a href="#">Oh I do like to be beside the sea</a></li>
+          <li><a href="#">Although in the North of England</a></li>
+          <li><a href="#">It never stops raining</a></li>
+          <li><a href="#">Oh well...</a></li>
+        </ul>
+      </aside>
+    </main>
+
+    <footer>
+      <p>©Copyright 2050 by nobody. All rights reversed.</p>
+    </footer>
   </body>
 </html>
 <!---->
